# MultiModel-RAG

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
src/: cfg.py  chat_history.py  controller.py  data.py  logging.py  main.py  prompts.py
src/backend/: app_logging.py  cfg.py  chat_history.py  controller.py  main.py  prompts.py
src/backend/agents/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
src/backend/clients/: __init__.py  embedding.py  llms.py  tts.py  vdb.py
src/backend/clients/llm_providers/: __init__.py  providers.py
src/backend/db/: chat_history_db.py  database.py
src/clients/: __init__.py  embedding.py  eval.py  llms.py  tts.py  vdb.py
src/clients/llm_providers/: llm_interface.py  providers.py
src/frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: AudioPlayer.tsx  AudioToggle.tsx  ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  FileUpload.tsx  FileUploadModal.tsx  MessageBubble.tsx  ReasoningBlock.tsx  SourceChunksAccordion.tsx  index.ts
src/frontend/src/services/: api.ts
src/frontend/src/types/: index.ts
