[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MultiModel-RAG"
version = "0.1.0"
description = "AI service that routes requests to different LLMs, applies caching, logs cost per request, and handles fallbacks."
authors = [
    { name = "Muhammad Ashraf" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]==0.128.0",
    "langchain-community==0.4.1",
    "pydantic-settings==2.12.0",
    "aiofiles==25.1.0",
    "qdrant-client==1.16.1",
    "openai==2.15.0",
    "cohere==5.20.1",
    "google-genai==1.57.0",
    "openai[voice_helpers]",
    "ragas==0.4.3",
    "PyMuPDF==1.26.7",
    "SQLAlchemy==2.0.46",
    "asyncpg==0.31.0",
    "greenlet==3.3.1",
    "alembic==1.18.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
